# geoip.rs

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.exmpl  README.md
examples/: geohash.rs  get_geo.rs  get_http.rs  getip.rs  serialize.rs
src/: geo.rs  main.rs  model.rs  router.rs
src/api/: mod.rs
src/geo/: mod.rs
src/model/: mod.rs
