[package]
name = "geoip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maxminddb = "=0.23.0"
tokio = { version = "1.20.1", features = ["full"] }
futures = { version = "=0.3" }
futures-util = { version = "0.3.23" }
thiserror = "1.0.32"
anyhow = "1.0.62"
serde = "1.0"
serde_json = "1.0"
hyper = {version="0.14.20", features=["full"]}
bytes = "1.2.1"

geohash = "0.12.0"