[package]
name = "geoip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maxminddb = "0.23"
geohash = "0.13"
geo = "*"
tokio = { version = "1.25", features = ["full"] }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
hyper = {version="0.14", features=["full"]}
bytes = "1.2"
clap = {version="4.1", features=["derive"]}

axum = "*"